@@ -21,6 +21,7 @@ In this alpha4 release, we have added:
 * A ChanTopics module for advanced management of channel topics.
 * buildmod now generates HTML and man(1) pages from a module's POD.
 * server:ajoin now supports channel keys by spacing the name and key.
+* A Dictionary module for looking up definitions of words.
 
 Bug fixes:
 
